# citeguard

./: .gitignore  README.md  pyproject.toml  requirements.txt
citeguard/: __init__.py  cli.py  corpus.py  llm.py  markers.py  pipeline.py  references.py  report.py  similarity.py
examples/: document.txt  references.txt  report.md
examples/sources/: 1.txt  2.txt  3.txt  4.txt  nguyen2021.txt
tests/: test_corpus.py  test_llm.py  test_markers.py  test_pipeline.py  test_references.py  test_report.py  test_similarity.py
